<resources>
    <string name="app_name">Etta POS</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="all_open">All Open</string>
    <string name="all_close">All Close</string>
    <string name="amount">Amount (cent)</string>
    <string name="fail">Fail</string>
    <string name="success">Success</string>
    <string name="loading">Loading</string>
    <string name="handling">Processing</string>
    <string name="requesting">Requesting</string>
    <string name="connect_loading">connecting to sdk</string>
    <string name="connect_success">connect to sdk success</string>
    <string name="connect_fail">connect to sdk fail, please exit to reconnect</string>
    <string name="basic">Basic</string>
    <string name="read_card">ReadCard</string>
    <string name="pin_pad">PinPad</string>
    <string name="security">Security</string>
    <string name="emv">EMV</string>
    <string name="scan">Scan</string>
    <string name="version">Version</string>
    <string name="other">Other</string>
    <string name="etc">ETC</string>
    <string name="basic_get_sys_param">Get system parameters</string>
    <string name="basic_set_sys_param">Set system parameters</string>
    <string name="basic_buzzer">Buzzer</string>
    <string name="basic_led">LED lamp control</string>
    <string name="basic_led_rb_on_new">Red/Blue on(New)</string>
    <string name="basic_led_yg_on_new">Yellow/Green on(New)</string>
    <string name="basic_led_all_on_new">All on(New)</string>
    <string name="basic_led_all_off_new">All off(New)</string>
    <string name="basic_screen_mode">Set screen exclusive</string>
    <string name="basic_sys_set_wakeup">Set system wakeup source</string>
    <string name="basic_buzzer_time">Buzzer time</string>
    <string name="basic_buzzer_time_delay">delay time (200~10000 ms)</string>
    <string name="basic_buzzer_1">1 time</string>
    <string name="basic_buzzer_2">2 time</string>
    <string name="basic_buzzer_3">3 time</string>
    <string name="basic_buzzer_4">4 time</string>
    <string name="basic_buzzer_5">5 time</string>
    <string name="basic_buzzer_6">6 time</string>
    <string name="basic_buzzer_time_delay_hint">Please input correct delay time</string>
    <string name="basic_sys_key">Key name(Only set Reserved key)</string>
    <string name="basic_sys_value">Key value</string>
    <string name="basic_sys_key_hint">Please input key name</string>
    <string name="basic_set_screen_monopoly">Set screen monopoly</string>
    <string name="basic_clear_screen_monopoly">Clear screen monopoly</string>
    <string name="basic_set_status_bar_drop_down_mode">Set status bar drop down mode</string>
    <string name="basic_disable">Disable</string>
    <string name="basic_enable">Enable</string>
    <string name="basic_set_nav_bar_visibility">Set navigation bar(items) visibility</string>
    <string name="basic_hide_nav_bar">Hide navigation bar</string>
    <string name="basic_show_nav_bar">Show navigation bar</string>
    <string name="basic_hide_nav_back">Hide Back key</string>
    <string name="basic_hide_nav_home">Hide Home key</string>
    <string name="basic_hide_nav_recent">Hide Recent key</string>
    <string name="basic_hide_nav_back_and_home">Hide Back and Home key</string>
    <string name="basic_hide_nav_back_and_recent">Hide Back and Recent key</string>
    <string name="basic_hide_nav_home_and_recent">Hide Home and Recent key</string>
    <string name="basic_hide_nav_all">Hide all</string>
    <string name="basic_show_nav_all">Show all</string>
    <string name="basic_screen_model_hint">Screen exclusive\nPower key disabled\nVolume key disabled\nSystem status bar disabled\nSystem navigation bar disabled</string>
    <string name="basic_emv_callback_timeout_time">Set EMV callback timeout time</string>
    <string name="basic_channel">channel(1-IC wakeup, 2-MagCard wakeup, 3-Physical key wakeup)</string>
    <string name="basic_mode">mode</string>
    <string name="basic_kb_beep_mode">keyboard beep mode</string>
    <string name="basic_shared_lib_test">Share lib test</string>
    <string name="basic_install_shared_libs">Install shared libs</string>
    <string name="basic_delete_shared_libs">Delete shared libs</string>
    <string name="basic_shared_libs_dir">Shared lib directory</string>
    <string name="card_test_mag">Magnetic card test</string>
    <string name="card_test_mag_enc">Magnetic card test(Encrypt track data)</string>
    <string name="card_test_ic">IC card test</string>
    <string name="card_test_nfc">NFC card test</string>
    <string name="card_test_m1">Mifare card test</string>
    <string name="card_test_m1_psame">Mifare card test(Authenticated by SAM AV2)</string>
    <string name="card_test_sam">SAM card test</string>
    <string name="card_test_MIFARE_Ultralight">MiFare Ultralight C card test</string>
    <string name="card_test_MIFARE_Ultralight_ev1">MiFare Ultralight ev1 card test</string>
    <string name="card_test_FELICA">FeLiCa card test</string>
    <string name="card_test_apdu">Normal APDU test</string>
    <string name="card_test_transmit_apdu">Transmit APDU test</string>
    <string name="card_test_mifare_plus">Mifare Plus card test</string>
    <string name="card_test_sle4442_4428">SLE4442/4428 card test</string>
    <string name="card_test_at24c">AT24Cxxx card test</string>
    <string name="card_test_at88scxx">AT88SCxxx card test</string>
    <string name="card_test_mifare_desfire_ev2">Mifare Desfire Ev2 card test</string>
    <string name="card_total">Total：</string>
    <string name="card_success">Pass：</string>
    <string name="card_fail">Fail：</string>
    <string name="card_track1">Track1：</string>
    <string name="card_track2">Track2：</string>
    <string name="card_track3">Track3：</string>
    <string name="card_preset_track_data">Preset track data</string>
    <string name="card_preset_track_tip">Please swipe card or input preset track data manually</string>
    <string name="card_track1_preset">Track1(preset)：</string>
    <string name="card_track2_preset">Track2(preset)：</string>
    <string name="card_track3_preset">Track3(preset)：</string>
    <string name="card_pan">PAN:</string>
    <string name="card_service_code">Service code:</string>
    <string name="card_check_ic_card">Find IC card</string>
    <string name="card_check_rf_card">Find RF card</string>
    <string name="card_check_card_error">Check card error</string>
    <string name="card_uuid">UUID：</string>
    <string name="card_ats">ATS:</string>
    <string name="card_atr">ATR：</string>
    <string name="card_NO">Card NO：</string>
    <string name="card_expire_date">Expire Date：</string>
    <string name="cardholder_name">Cardholder Name：</string>
    <string name="card_sector">Sector (0&#8211;15)</string>
    <string name="card_block">Block (0&#8211;2)</string>
    <string name="card_key_A">KeyA</string>
    <string name="card_key_B">KeyB</string>
    <string name="card_block_0">Block0</string>
    <string name="card_block_1">Block1</string>
    <string name="card_block_2">Block2</string>
    <string name="card_balance_symbol">Balance:</string>
    <string name="card_cost">Cost</string>
    <string name="card_read">Read</string>
    <string name="card_write">Write</string>
    <string name="card_init">Init</string>
    <string name="card_balance">Balance</string>
    <string name="card_value_add">Add</string>
    <string name="card_value_reduce">Reduce</string>
    <string name="card_value_restore">Restore</string>
    <string name="card_sector_hint">Please input correct sector(0&#8211;15)</string>
    <string name="card_block_hint">Please input correct block(0&#8211;2)</string>
    <string name="card_key_hint">Please input correct key</string>
    <string name="card_cost_hint">Please input correct cost amount</string>
    <string name="card_auth_success">Auth success</string>
    <string name="card_auth_fail">Auth fail</string>
    <string name="card_wallet_init_success">Init wallet format success</string>
    <string name="card_wallet_init_fail">Init wallet format fail</string>
    <string name="card_wallet_balance_success">Get wallet balance success</string>
    <string name="card_wallet_balance_fail">Get wallet balance fail</string>
    <string name="card_wallet_add_value_success">Increase wallet value success</string>
    <string name="card_wallet_add_value_fail">Increase wallet value fail</string>
    <string name="card_wallet_dec_value_success">Decrease wallet value success</string>
    <string name="card_wallet_dec_value_fail">Decrease wallet value fail</string>
    <string name="card_command">Command</string>
    <string name="card_lc_length">LC length</string>
    <string name="card_data">Data content</string>
    <string name="card_le_length">LE length</string>
    <string name="card_command_hint">Please input correct command</string>
    <string name="card_lc_length_hint">Please input correct LC length</string>
    <string name="card_data_hint">Please input correct data content</string>
    <string name="card_le_length_hint">Please input correct LE length</string>
    <string name="card_hit_apdu_cmd">command(Hex,4B)</string>
    <string name="card_hit_apdu_lc">Lc(Hex,1~2B unsigned,value is LEN)</string>
    <string name="card_hit_apdu_indata">indata(Hex,LEN B)</string>
    <string name="card_hit_apdu_le">Le(Hex,1~2B unsigned)</string>
    <string name="card_read_trade_card">check card</string>
    <string name="card_clean_result">clear result</string>
    <string name="card_nfc_apdu">send apdu</string>
    <string name="card_auth_key">Authenticate key</string>
    <string name="card_change_key">Change key</string>
    <string name="card_read_block_data">Read block data</string>
    <string name="card_write_block_data">Write block data</string>
    <string name="card_read_data">Read data</string>
    <string name="card_write_data">Write data</string>
    <string name="card_get_remain_auth_count">Read remain authentication count</string>
    <string name="card_write_protection_memory">Write protection memory</string>
    <string name="card_memory_protection_status">Read memory protection status</string>
    <string name="card_remain_count">Remain count:</string>
    <string name="card_card_type">Card type</string>
    <string name="card_sam0">SAM0</string>
    <string name="card_sam1">SAM1</string>
    <string name="card_sam2">SAM2</string>
    <string name="card_sam3">SAM3</string>
    <string name="card_sle4442">SLE4442</string>
    <string name="card_sle4428">SLE4428</string>
    <string name="card_at24c01">AT24C01</string>
    <string name="card_at24c02">AT24C02</string>
    <string name="start_test">Start test</string>
    <string name="stop_test">Stop test</string>
    <string name="usb_comm">USB</string>
    <string name="serial_port_comm">Serial Port</string>
    <string name="wifi_comm">WIFI</string>
    <string name="bluetooth_comm">Bluetooth</string>
    <string name="comm_type">Communication Type</string>
    <string name="check">Check</string>
    <string name="send_data">Send Data</string>
    <string name="out_log">Output Log</string>
    <string name="send">send</string>
    <string name="test_hint_input_data_len">input data len(range 1–2036)</string>
    <string name="test_hint_test_time">test time(unit: min)</string>
    <string name="test_hint_delay_time">delay time(unit: ms, range 0–200)</string>
    <string name="test_total_count">total count:</string>
    <string name="test_success_count">success count:</string>
    <string name="test_failed_count">failed count：</string>
    <string name="test_success_percent">success percentage:</string>
    <string name="test_success_data_amount">success data amount:</string>
    <string name="test_spent_time">total test time:</string>
    <string name="test_data_exchange_speed">data exchange speed:</string>
</resources>