<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleSize"
        android:elevation="4dp"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/comm_type"
                android:textColor="@color/colorTextHelp"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_usb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/usb_comm"
                    android:textColor="@color/colorTextContent"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rb_serial_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/serial_port_comm"
                    android:textColor="@color/colorTextContent"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rb_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/wifi_comm"
                    android:textColor="@color/colorTextContent"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rb_bluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/bluetooth_comm"
                    android:textColor="@color/colorTextContent"
                    android:textSize="12sp" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <android.support.design.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorOrange"
                    android:elevation="3dp"
                    android:gravity="center"
                    android:onClick="open"
                    android:text="@string/open"
                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:backgroundTint="@color/colorOrange"
                    app:cornerRadius="5dp" />

                <android.support.design.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorOrange"
                    android:elevation="3dp"
                    android:gravity="center"
                    android:onClick="close"
                    android:text="@string/close"
                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:backgroundTint="@color/colorOrange"
                    app:cornerRadius="5dp" />

                <android.support.design.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorOrange"
                    android:elevation="3dp"
                    android:gravity="center"
                    android:onClick="check"
                    android:text="@string/check"
                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:backgroundTint="@color/colorOrange"
                    app:cornerRadius="5dp" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_send_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/send_data"
                    android:inputType="text"
                    android:textColor="@color/colorTextContent"
                    android:textColorHint="@color/colorTextHelp"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_margin="5dp"
                android:background="@color/colorOrange"
                android:elevation="3dp"
                android:gravity="center"
                android:onClick="send"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="@color/colorOrange"
                app:cornerRadius="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/out_log"
                android:textColor="@color/colorTextHelp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_output_log"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:textSize="8sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
