<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleSize"
        android:elevation="4dp"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fillViewport="true"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edt_input_data_len"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/test_hint_input_data_len"
                            android:inputType="number"
                            android:text="2000"
                            android:textColor="@color/colorTextContent"
                            android:textColorHint="@color/colorTextHelp"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edt_test_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/test_hint_test_time"
                            android:inputType="number"
                            android:textColor="@color/colorTextContent"
                            android:textColorHint="@color/colorTextHelp"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edt_delay_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/test_hint_delay_time"
                            android:inputType="number"
                            android:text="0"
                            android:textColor="@color/colorTextContent"
                            android:textColorHint="@color/colorTextHelp"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_total_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:text="@string/test_total_count"
                        android:textColor="@color/colorTextHelp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_success_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:text="@string/test_success_count"
                        android:textColor="@color/colorTextHelp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_failure_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:text="@string/test_failed_count"
                        android:textColor="@color/colorTextHelp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_success_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:text="@string/test_success_percent"
                        android:textColor="@color/colorTextHelp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_success_data_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:text="@string/test_success_data_amount"
                        android:textColor="@color/colorTextHelp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_total_test_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:text="@string/test_spent_time"
                        android:textColor="@color/colorTextHelp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_data_exchange_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:text="@string/test_data_exchange_speed"
                        android:textColor="@color/colorTextHelp"
                        android:textSize="14sp" />

                    <android.support.design.button.MaterialButton
                        android:id="@+id/btn_start"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/titleSize"
                        android:layout_marginTop="20dp"
                        android:elevation="3dp"
                        android:gravity="center"
                        android:text="@string/start_test"
                        android:textAllCaps="false"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:backgroundTint="@color/colorOrange"
                        app:cornerRadius="8dp" />

                    <android.support.design.button.MaterialButton
                        android:id="@+id/btn_stop"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/titleSize"
                        android:layout_marginTop="16dp"
                        android:elevation="3dp"
                        android:gravity="center"
                        android:text="@string/stop_test"
                        android:textAllCaps="false"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:backgroundTint="@color/colorOrange"
                        app:cornerRadius="8dp" />
                </LinearLayout>
            </android.support.design.card.MaterialCardView>
        </LinearLayout>

    </ScrollView>

</LinearLayout>