<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleSize"
        android:elevation="4dp"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/card_preset_track_tip"
                android:textSize="14sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:counterEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_preset_track1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_track1_preset"
                    android:textColor="@color/colorTextContent"
                    android:textColorHint="@color/colorTextHelp"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_preset_track2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_track2_preset"
                    android:textColor="@color/colorTextContent"
                    android:textColorHint="@color/colorTextHelp"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_preset_track3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_track3_preset"
                    android:textColor="@color/colorTextContent"
                    android:textColorHint="@color/colorTextHelp"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/mb_ok"
                android:layout_width="match_parent"
                android:layout_height="@dimen/titleSize"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/ok"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/colorOrange"
                app:cornerRadius="8dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>